[gd_scene load_steps=7 format=3 uid="uid://dv3lxr45lmkl8"]

[ext_resource type="Script" path="res://assets/scripts/puzzles/story/story_puzzle.gd" id="1_1drat"]
[ext_resource type="PackedScene" uid="uid://y1nw8nh1mfpg" path="res://assets/scenes/puzzles/story/story_gate.tscn" id="1_4so71"]
[ext_resource type="PackedScene" uid="uid://c2l81vbxd834i" path="res://assets/scenes/puzzles/key.tscn" id="2_n27ap"]
[ext_resource type="PackedScene" uid="uid://c2j1008w15vwg" path="res://assets/meshes/puzzles/story.scn" id="4_0afd7"]
[ext_resource type="AudioStream" uid="uid://cww8220k8xjh2" path="res://assets/sounds/story_woosh.wav" id="5_7fpxx"]

[sub_resource type="BoxShape3D" id="BoxShape3D_h8x0i"]
size = Vector3(7.271, 4.512, 4)

[node name="StoryPuzzle" type="Node3D"]
script = ExtResource("1_1drat")

[node name="StoryGate1" parent="." instance=ExtResource("1_4so71")]

[node name="StoryGate2" parent="." instance=ExtResource("1_4so71")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0)

[node name="StoryGate3" parent="." instance=ExtResource("1_4so71")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 0)

[node name="Key" parent="." instance=ExtResource("2_n27ap")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -11.5654, 1.31516, 0)

[node name="WarpPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.75, 0, 0)

[node name="story" parent="." instance=ExtResource("4_0afd7")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -13.3, -4, 0)

[node name="EncounterArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.6008, 0, 0)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="EncounterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.15619, 2.44547, 0)
shape = SubResource("BoxShape3D_h8x0i")

[node name="WooshSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_7fpxx")
max_polyphony = 2
bus = &"Reverb"

[connection signal="body_entered" from="EncounterArea" to="." method="_on_encounter_area_body_entered"]
